@@ -4,7 +4,7 @@ Make it easy to import from cachecontrol without long namespaces.
 """
 __author__ = 'Eric Larson'
 __email__ = 'eric@ionrock.org'
-__version__ = '0.11.1'
+__version__ = '0.11.2'
 
 from .wrapper import CacheControl
 from .adapter import CacheControlAdapter
